@@ -18,6 +18,7 @@ Current development version: 3.28-01 (2018-03-13)
 - 01: Bugfix #518: Very slow scrolling of diagrams lacking type info [TiNNiT]2
 - 01: Bugfix #520: "no conversion" export mode had to be enforced (Pascal, C) <2>
 - 01: Bugfix #521: Variable declaration export had been inconsistent for Oberon <2>
+- 01: Enh. #519: Zooming / font size control via ctrl + mouse wheel [B. Neuberg]2
 
 Version 3.28 (2018-02-18)
 - 01: Bugfix #445: Array index out of bounds errors on COBOL import <2>
